🌐(frontend) add a language selector in the header
this will be better in an options page later i think, as we don't pass
our life changing language and we already have a language detector at
load.

this adds a PopoverList primitive to easily create buttons triggering
popovers containing list of actionable items.

--- a/src/frontend/src/locales/de/global.json
+++ b/src/frontend/src/locales/de/global.json
@@ -9,6 +9,10 @@
   "app": "Meet",
   "login": "Anmelden",
   "logout": "",
+  "languageSelector": {
+    "popoverLabel": "",
+    "buttonLabel": ""
+  },
   "loading": "",
   "notFound": {
     "heading": ""
