🌐(frontend) sort extrated locales to help prevent conflicts
when adding keys by hand, we didn't really know where to add them so
that the i18n:extract command would not move them afterwards. Feels like
this will help.
I guess a CI thing checking if the locales file dont change after a push
would be helpful

--- a/src/frontend/src/locales/de/global.json
+++ b/src/frontend/src/locales/de/global.json
@@ -1,4 +1,5 @@
 {
+  "app": "Meet",
   "backToHome": "",
   "error": {
     "heading": ""
@@ -6,14 +7,13 @@
   "forbidden": {
     "heading": ""
   },
-  "app": "Meet",
-  "login": "Anmelden",
-  "logout": "",
   "languageSelector": {
-    "popoverLabel": "",
-    "buttonLabel": ""
+    "buttonLabel": "",
+    "popoverLabel": ""
   },
   "loading": "",
+  "login": "Anmelden",
+  "logout": "",
   "notFound": {
     "heading": ""
   }
