--- a/src/frontend/src/locales/de/home.json
+++ b/src/frontend/src/locales/de/home.json
@@ -1,8 +1,8 @@
 {
+  "copyMeetingUrl": "",
+  "createMeeting": "",
   "heading": "",
   "intro": "",
-  "createMeeting": "",
   "login": "",
-  "or": "",
-  "copyMeetingUrl": ""
+  "or": ""
 }
