--- a/src/frontend/src/locales/en/home.json
+++ b/src/frontend/src/locales/en/home.json
@@ -1,8 +1,8 @@
 {
+  "copyMeetingUrl": "copy a meeting URL in your browser address bar to join an existing conference call",
+  "createMeeting": "Create a conference call",
   "heading": "Welcome in Meet",
   "intro": "What do you want to do? You can either:",
-  "createMeeting": "Create a conference call",
   "login": "Login to create a conference call",
-  "or": "Or",
-  "copyMeetingUrl": "copy a meeting URL in your browser address bar to join an existing conference call"
+  "or": "Or"
 }
