💄(home) have a cleaner homepage layout
- try a new layout for the homepage, making it easier to join a meeting
- add a new Dialog component to easily build dialogs

--- a/src/frontend/src/locales/de/home.json
+++ b/src/frontend/src/locales/de/home.json
@@ -1,8 +1,13 @@
 {
-  "copyMeetingUrl": "",
   "createMeeting": "",
   "heading": "",
   "intro": "",
-  "login": "",
-  "or": ""
+  "joinInputError": "",
+  "joinInputExample": "",
+  "joinInputLabel": "",
+  "joinInputSubmit": "",
+  "joinMeeting": "",
+  "joinMeetingTipContent": "",
+  "joinMeetingTipHeading": "",
+  "loginToCreateMeeting": ""
 }
