--- a/src/frontend/src/locales/de/rooms.json
+++ b/src/frontend/src/locales/de/rooms.json
@@ -1,5 +1,9 @@
 {
   "join": {
-    "heading": ""
+    "camlabel": "",
+    "heading": "",
+    "joinLabel": "",
+    "micLabel": "",
+    "userLabel": ""
   }
 }
