--- a/src/frontend/src/locales/en/settings.json
+++ b/src/frontend/src/locales/en/settings.json
@@ -1,11 +1,6 @@
 {
-  "account": {
-    "currentlyLoggedAs": "You are currently logged in as <0>{{user}}</0>",
-    "heading": "Account",
-    "youAreNotLoggedIn": "You are not logged in."
-  },
   "dialog": {
-    "heading": "Account and settings"
+    "heading": "Settings"
   },
   "language": {
     "heading": "Language",
