🚸(room) prevent user from misclicking out of a meeting
now clicking on the header homepage link asks for confirmation when on
the route page.

this is quick and dirty, using browser confirm ui, and not making a
difference between join page and conference page, but it'll do for now

--- a/src/frontend/src/locales/en/rooms.json
+++ b/src/frontend/src/locales/en/rooms.json
@@ -5,5 +5,6 @@
     "joinLabel": "Join",
     "micLabel": "Microphone",
     "userLabel": "Your name"
-  }
+  },
+  "leaveRoomPrompt": "This will make you leave the meeting."
 }
