✨(frontend) new feedback link in header
this is just a link to an external url that is, for now, hardcoded as
our deploys dont have frontend env vars right now

--- a/src/frontend/src/locales/en/global.json
+++ b/src/frontend/src/locales/en/global.json
@@ -6,6 +6,7 @@
   "error": {
     "heading": "An error occured while loading the page"
   },
+  "feedbackAlert": "Give us feedback on Meet",
   "forbidden": {
     "heading": "You don't have the permission to view this page"
   },
