✨(rooms) show an invite dialog when creating a room
for now the dialog appears as a regular dialog with an overlay and all,
would be better as less intrusive. but good as is as a first step

--- a/src/frontend/src/locales/de/rooms.json
+++ b/src/frontend/src/locales/de/rooms.json
@@ -6,5 +6,10 @@
     "micLabel": "",
     "userLabel": ""
   },
-  "leaveRoomPrompt": ""
+  "leaveRoomPrompt": "",
+  "shareDialog": {
+    "copy": "",
+    "heading": "",
+    "inputLabel": ""
+  }
 }
