🚸(feedback) better wording
"on Meet" was misleading, it was like, "give us feedback by going on
'meet'. Let's be straightforward

--- a/src/frontend/src/locales/en/global.json
+++ b/src/frontend/src/locales/en/global.json
@@ -6,7 +6,7 @@
   "error": {
     "heading": "An error occured while loading the page"
   },
-  "feedbackAlert": "Give us feedback on Meet",
+  "feedbackAlert": "Give us feedback",
   "forbidden": {
     "heading": "You don't have the permission to view this page"
   },
