--- a/src/frontend/src/locales/fr/global.json
+++ b/src/frontend/src/locales/fr/global.json
@@ -6,7 +6,7 @@
   "error": {
     "heading": "Une erreur est survenue lors du chargement de la page"
   },
-  "feedbackAlert": "Donnez-nous votre avis sur Meet",
+  "feedbackAlert": "Donnez-nous votre avis",
   "forbidden": {
     "heading": "Accès interdit"
   },
