🚸(feedback) remember the user about feedback form on call end
add a new route that just tells the user about the feedback form

--- a/src/frontend/src/locales/en/rooms.json
+++ b/src/frontend/src/locales/en/rooms.json
@@ -1,4 +1,8 @@
 {
+  "feedback": {
+    "body": "Please fill out the form available in the header to give us your precious feedback! Thanks.",
+    "heading": "Help us improve Meet"
+  },
   "join": {
     "camlabel": "Camera",
     "heading": "Join the meeting",
