✨(frontend) allow customization of error title and description
Enhanced the error screen to support customizable titles and descriptions.

Allows for more detailed and informative error messages for users.
By default, the error screen displays a standard heading. You can
now pass custom title and body content to provide additional context
and clarity.

--- a/src/frontend/src/locales/de/rooms.json
+++ b/src/frontend/src/locales/de/rooms.json
@@ -16,5 +16,11 @@
     "copy": "",
     "heading": "",
     "inputLabel": ""
+  },
+  "error": {
+    "createRoom": {
+      "heading": "",
+      "body": ""
+    }
   }
 }
