✨(join) add audio output selection
new button to select audio output and pass it to the conference.

this is in its own commit because we might not want to add this directly
in the code: we can choose output in the join screen but not in the
conference screen for now. this might be a bit misleading and better to
not have it entirely for now?

--- a/src/frontend/src/locales/de/rooms.json
+++ b/src/frontend/src/locales/de/rooms.json
@@ -10,6 +10,7 @@
     "camlabel": "",
     "chooseCamera": "",
     "chooseMic": "",
+    "chooseSpeaker": "",
     "heading": "",
     "joinLabel": "",
     "joinMeeting": "",
