--- a/src/frontend/src/locales/en/rooms.json
+++ b/src/frontend/src/locales/en/rooms.json
@@ -10,6 +10,7 @@
     "camlabel": "",
     "chooseCamera": "Select camera",
     "chooseMic": "Select microphone",
+    "chooseSpeaker": "Select speakers",
     "heading": "Verify your settings",
     "joinLabel": "",
     "joinMeeting": "Join meeting",
