--- a/src/frontend/src/locales/fr/rooms.json
+++ b/src/frontend/src/locales/fr/rooms.json
@@ -10,6 +10,7 @@
     "camlabel": "",
     "chooseCamera": "Choisir la webcam",
     "chooseMic": "Choisir le micro",
+    "chooseSpeaker": "Choisir la sortie audio",
     "heading": "Vérifiez vos paramètres",
     "joinLabel": "",
     "joinMeeting": "Rejoindre la réjoindre",
