✨(frontend) introduce a menu with more actions
Replaced the existing settings button with a new `OptionsButton` component.
This new component integrates a menu for more actions, providing an
extensible and accessible interface.

Refactoring will follow to enhance code maintainability.

A legacy style was introduced to keep visual coherence with the other controls
from the controls bar. It's temporary, until we redesign the whole bar.
It doesn't match pixel-perfect the legacy styles.

A new public Tchap chan was created. All users, and not only beta users,
can now join it using the link in the menu, and reach us.

--- a/src/frontend/src/locales/de/rooms.json
+++ b/src/frontend/src/locales/de/rooms.json
@@ -29,7 +29,14 @@
     "shareScreen": "",
     "stopScreenShare": "",
     "chat": "",
-    "settings": "",
     "leave": ""
+  },
+  "options": {
+    "buttonLabel": "",
+    "items": {
+      "feedbacks": "",
+      "support": "",
+      "settings": ""
+    }
   }
 }
