✨(frontend) allow local participant to update her name
The user name is initially set by the backend when generating the LiveKit access
token. By default, if the frontend has not provided a username, the backend uses
the user's email address. This approach isn't ideal, as some users prefer using
their first name.

This update allows local participant to change their username in real-time
during a session. However, these changes are not yet persisted for
future meetings. This persistence feature will be added in upcoming commits.

--- a/src/frontend/src/locales/de/rooms.json
+++ b/src/frontend/src/locales/de/rooms.json
@@ -36,7 +36,15 @@
     "items": {
       "feedbacks": "",
       "support": "",
-      "settings": ""
+      "settings": "",
+      "username": ""
+    },
+    "username": {
+      "heading": "",
+      "label": "",
+      "description": "",
+      "validationError": "",
+      "submitLabel": ""
     }
   }
 }
