--- a/src/frontend/src/locales/fr/rooms.json
+++ b/src/frontend/src/locales/fr/rooms.json
@@ -36,7 +36,15 @@
     "items": {
       "feedbacks": "Partager votre avis",
       "support": "Obtenir de l'aide sur Tchap",
-      "settings": "Paramètres"
+      "settings": "Paramètres",
+      "username": "Choisir votre nom"
+    },
+    "username": {
+      "heading": "Choisir votre nom",
+      "label": "Votre Nom",
+      "description": "Tous les autres participants verront ce nom.",
+      "validationError": "Le nom ne peut pas être vide.",
+      "submitLabel": "Enregistrer"
     }
   }
 }
