✨(frontend) create a control button for participants list
Introduced a button to manage the visibility of the participants list.

Encountered refresh issues with the room context where the participant count
in the room metadata does not update in real-time, causing discrepancies
between the actual number of participants and the displayed count. To address
this, I utilized the participants hook, which updates more frequently and
ensures consistency.

--- a/src/frontend/src/locales/de/rooms.json
+++ b/src/frontend/src/locales/de/rooms.json
@@ -29,7 +29,11 @@
     "shareScreen": "",
     "stopScreenShare": "",
     "chat": "",
-    "leave": ""
+    "leave": "",
+    "participants": {
+      "open": "",
+      "closed": ""
+    }
   },
   "options": {
     "buttonLabel": "",
