♻️(frontend) refactor Chat toggle
This commit refactor the default chat toggle to enhance few details:

- styling (e.g. button's size, icon's style, etc)
- accessibility (e.g. tooltip, aria label, keyboard controls)
- notifications (enhanced contrast on the red dot, feedback from Arnaud)

--- a/src/frontend/src/locales/de/rooms.json
+++ b/src/frontend/src/locales/de/rooms.json
@@ -28,7 +28,10 @@
     "camera": "",
     "shareScreen": "",
     "stopScreenShare": "",
-    "chat": "",
+    "chat": {
+      "open": "",
+      "closed": ""
+    },
     "leave": "",
     "participants": {
       "open": "",
