✨(frontend) introduce SettingsDialogExtended
This component should be the definitive layout for settings.
Why extended? I kept the original one, which is still in-use in the
homepage, and considered this settings dialos as an extended version,
or advanced one.

I hope in a close future, we merge these two dialogs to avoid
maintaining too much code. Not the top prio.

Relevant TabPanel components will be introduced in the upcomming commits.

--- a/src/frontend/src/locales/de/settings.json
+++ b/src/frontend/src/locales/de/settings.json
@@ -11,5 +11,10 @@
     "heading": "",
     "label": ""
   },
-  "settingsButtonLabel": ""
+  "settingsButtonLabel": "",
+  "tabs": {
+    "account": "",
+    "audio": "",
+    "general": ""
+  }
 }
