♻️(frontend) move name update to AccountTab
User can now update their name in a dedicated Account tab,
inspired by Jitsi design. Removed the username dialog.

Account-related updates will be operated through the advanced
settings dialog, in this dedicated tab.

--- a/src/frontend/src/locales/de/settings.json
+++ b/src/frontend/src/locales/de/settings.json
@@ -2,7 +2,9 @@
   "account": {
     "currentlyLoggedAs": "",
     "heading": "",
-    "youAreNotLoggedIn": ""
+    "youAreNotLoggedIn": "",
+    "nameLabel": "",
+    "authentication": ""
   },
   "dialog": {
     "heading": ""
