--- a/src/frontend/src/locales/fr/settings.json
+++ b/src/frontend/src/locales/fr/settings.json
@@ -2,7 +2,9 @@
   "account": {
     "currentlyLoggedAs": "Vous êtes actuellement connecté en tant que <0>{{user}}</0>",
     "heading": "Compte",
-    "youAreNotLoggedIn": "Vous n'êtes pas connecté."
+    "youAreNotLoggedIn": "Vous n'êtes pas connecté.",
+    "nameLabel": "Votre Nom",
+    "authentication": "Authentification"
   },
   "dialog": {
     "heading": "Paramètres"
