✨(frontend) add the AudioTab component
First draft, it lacks important features, as a visual indicator when
the mic is active, and a trigger to test the audio output.

I made some heuristics (e.g. default output/input, etc..) to ship a
first version of this setting tabs that should work good enough to
create value for our current users.

Please refer to the inline comments.

--- a/src/frontend/src/locales/de/settings.json
+++ b/src/frontend/src/locales/de/settings.json
@@ -6,6 +6,17 @@
     "nameLabel": "",
     "authentication": ""
   },
+  "audio": {
+    "microphone": {
+      "heading": "",
+      "label": ""
+    },
+    "speakers": {
+      "heading": "",
+      "label": ""
+    },
+    "permissionsRequired": ""
+  },
   "dialog": {
     "heading": ""
   },
