✨(frontend) allow user to test audio output
Inspired by GMeet user experience. Offer a sound tester button
to our users while configuring their audio output.

uprise.mp3 has a free license. We should credit them in our legal
terms asap.

--- a/src/frontend/src/locales/de/settings.json
+++ b/src/frontend/src/locales/de/settings.json
@@ -13,7 +13,9 @@
     },
     "speakers": {
       "heading": "",
-      "label": ""
+      "label": "",
+      "test": "",
+      "ongoingTest": ""
     },
     "permissionsRequired": ""
   },
