--- a/src/frontend/src/locales/en/settings.json
+++ b/src/frontend/src/locales/en/settings.json
@@ -13,7 +13,9 @@
     },
     "speakers": {
       "heading": "Speakers",
-      "label": "Select your audio output"
+      "label": "Select your audio output",
+      "test": "Test",
+      "ongoingTest": "Testing sound…"
     },
     "permissionsRequired": "Permissions required"
   },
